# OOPcourseWork

./: CMakeLists.txt  OOPcourseWork.pro  elevator.cpp  elevator.h  elevatorSystem.cpp  elevatorSystem.h  mainWindow.cpp  mainWindow.h  passenger.h
